# SyncRT

./: CMakeLists.txt  README.md  SyncRT.cc  plot_dose_cube.py  vis.mac
include/: ActionInitialisation.hh  DetectorConstruction.hh  EventAction.hh  Inputs.hh  ParallelDetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SpectrumData.hh  VoxelScorer.hh
src/: ActionInitialisation.cc  DetectorConstruction.cc  EventAction.cc  Inputs.cc  ParallelDetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SpectrumData.cc  VoxelScorer.cc
